# quant-research-bot

./: .gitignore  LICENSE  README.md  build_index.py  chat.html  eval_report.json  generate_manifest.py  manifest.json  papers_script.py  prompt-kit.md  pyproject.toml  rag_logs.jsonl  run_rag.py
app/: artifacts.py  embeddings.py  evaluation.py  export.py  main.py  rag.py  scraper.py  threads.py
artifacts/1d1285728cfd/: bibliography.json  evidence_table.json  synthesis_memo.json
artifacts/450ef0c47cbf/: bibliography.json  evidence_table.json  synthesis_memo.json
artifacts/c8a561e81e47/: bibliography.json  evidence_table.json  synthesis_memo.json
index/: chunks_meta.json  faiss.index  index_config.json
threads/: 1d1285728cfd.json  450ef0c47cbf.json  c8a561e81e47.json  d5439b637ac4.json
