[project]
name = "alpha-research-portal"
version = "0.1.0"
description = "alpha research LLM agent for quantative research"
authors = [
    {name = "Prithiraj Bhuyan"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "arxiv (>=2.4.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "docling (>=2.70.0,<3.0.0)",
    "marker-pdf[full] (>=1.10.1,<2.0.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "fitz (>=0.0.1.dev2,<0.0.2)",
    "chromadb (>=1.4.1,<2.0.0)",
    "langchain (>=1.2.7,<2.0.0)",
    "sentence-transformers (>=5.2.2,<6.0.0)",
    "pymupdf (>=1.26.7,<2.0.0)",
    "langgraph (>=1.0.7,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "langchain-google-genai (>=4.2.0,<5.0.0)",
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "google (>=3.0.0,<4.0.0)",
    "unstructured-client (>=0.30.6)",
    "faiss-cpu (>=1.13.2,<2.0.0) ; python_version >= \"3.10\" and python_version < \"3.15\"",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "openai (>=1.65.2,<2.0.0)",
    "groq (>=1.0.0,<2.0.0)"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
